Added cron info.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,7 @@ dmypy.json
 # Streamlit
 .streamlit/secrets.toml
 .streamlit/cache/
+
+
+#Ignore vscode AI rules
+.github/instructions/codacy.instructions.md
