--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,9 @@ dependencies = [
   "tqdm>=4.66.1",
   "humanize>=4.9.0",
 
+  # Scheduling
+  "APScheduler>=3.10.0",
+
   # Streamlit UI
   "streamlit>=1.31.0",
   "plotly>=5.18.0",
