Pin APScheduler to 3.10.4 in pyproject.toml for consistent Streamlit deployment

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dependencies = [
   "humanize>=4.9.0",
 
   # Scheduling
-  "APScheduler>=3.10.0",
+  "APScheduler==3.10.4",
 
   # Streamlit UI
   "streamlit>=1.31.0",
