--- a/requirements.txt
+++ b/requirements.txt
@@ -48,4 +48,4 @@ APScheduler==3.10.4
 streamlit>=1.31.0
 plotly>=5.18.0
 altair>=5.2.0
-streamlit-authenticator>=0.4.2
+# streamlit-authenticator removed - now using built-in Google OAuth
