Add Authlib dependency for Streamlit OAuth and protect secrets
- Add Authlib>=1.3.2 to requirements.txt (required by st.user)
- Add .streamlit/secrets.toml* to .gitignore to prevent committing credentials
- OAuth secrets must be configured locally and on Streamlit Cloud (not committed)

Fixes StreamlitAuthError when using st.login()

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,5 @@ dmypy.json
 
 #Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
+.streamlit/secrets.toml
+.streamlit/secrets.toml.cloud
