--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,4 @@ streamlit>=1.31.0
 plotly>=5.18.0
 altair>=5.2.0
 # streamlit-authenticator removed - now using built-in Google OAuth
+Authlib>=1.3.2
