--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,12 @@ plotly>=5.18.0
 altair>=5.2.0
 # streamlit-authenticator removed - now using built-in Google OAuth
 Authlib>=1.3.2
+
+# UI Components
+streamlit-antd-components>=0.3.2
+streamlit-elements>=0.1.0
+streamlit-tags>=1.2.8
+streamlit-shadcn-ui>=0.1.19
+stqdm>=0.0.5
+st-supabase-connection>=2.1.3
+streamlit-extras>=0.6.0
