Add Stripe subscription management with st-paywall integration
Integrated st-paywall library to enable subscription-based access control with three tiers: Free, Pro, and Enterprise.

Core Changes:
- Add st-paywall>=1.0.1 and stripe>=11.0.0 to requirements.txt
- Create paywall_config.py with PaywallConfig class for tier management
- Add subscription tiers with feature access controls and rate limits
- Create 10_💳_Subscription.py page for subscription management
- Update app.py to include Subscription page in navigation
- Update command_palette.py with Subscription command

Features:
- Three subscription tiers (Free, Pro, Enterprise) with distinct limits
- Feature-level access control (trading_signals, auto_trading, portfolio_tracking, api_access)
- Rate limiting for data_collection_runs and scheduled_jobs
- Multiple integration patterns: add_paywall(), check_feature_access(), @require_feature
- Subscription management UI with tier comparison and usage metrics

Configuration:
- Update .streamlit/secrets.toml with Stripe configuration placeholders
- Update .streamlit/config.toml with debug logging and full error details

Documentation:
- Add docs/PAYWALL_INTEGRATION.md with setup guide and API reference
- Add docs/STREAMLIT_SERVER_STATE_ANALYSIS.md analyzing server-state library

Implementation follows existing authentication pattern and integrates seamlessly with auth_utils_enhanced.py session management.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -112,21 +112,21 @@ fastReruns = true                            # Fast reruns for better UX
 # LOGGER SETTINGS
 # -----------------------------------------------------------------------------
 [logger]
-level = "info"                               # Log level: "error", "warning", "info", "debug"
-# messageFormat = "%(asctime)s %(message)s"  # Log message format
+level = "debug"                               # Log level: "error", "warning", "info", "debug"
+messageFormat = "%(asctime)s %(message)s"  # Log message format
 
 # -----------------------------------------------------------------------------
 # CLIENT SETTINGS
 # -----------------------------------------------------------------------------
 [client]
-# # Error display control:
-# # showErrorDetails = "full"                # "full", "stacktrace", "type", or "none"
+# Error display control:
+showErrorDetails = "full"                # "full", "stacktrace", "type", or "none"
 # #
 # # Toolbar visibility:
-# # toolbarMode = "auto"                     # "auto", "developer", "viewer", or "minimal"
+toolbarMode = "auto"                     # "auto", "developer", "viewer", or "minimal"
 # #
 # # Sidebar navigation in multipage apps:
-# # showSidebarNavigation = true             # Show default navigation UI
+showSidebarNavigation = true             # Show default navigation UI
 
 # -----------------------------------------------------------------------------
 # THEME CUSTOMIZATION (ADVANCED)
@@ -138,23 +138,23 @@ level = "info"                               # Log level: "error", "warning", "i
 # # base = "light"                           # "light", "dark", or path to .toml file
 
 # # Additional Color Options
-# # redColor = "#ff4b4b"                     # Semantic red
-# # orangeColor = "#ffa421"                  # Semantic orange
-# # yellowColor = "#ffe312"                  # Semantic yellow
-# # greenColor = "#21c354"                   # Semantic green
-# # blueColor = "#0068c9"                    # Semantic blue
-# # violetColor = "#803df5"                  # Semantic violet
-# # grayColor = "#808495"                    # Semantic gray
+redColor = "#ff4b4b"                     # Semantic red
+orangeColor = "#ffa421"                  # Semantic orange
+yellowColor = "#ffe312"                  # Semantic yellow
+greenColor = "#21c354"                   # Semantic green
+blueColor = "#0068c9"                    # Semantic blue
+violetColor = "#803df5"                  # Semantic violet
+grayColor = "#808495"                    # Semantic gray
 
 # # Font Customization
-# # headingFont = "sans serif"               # Heading font family
-# # baseFontSize = "1rem"                    # Base font size
-# # baseFontWeight = 400                     # Base font weight
-# # codeFontWeight = 400                     # Code font weight
+headingFont = "sans serif"               # Heading font family
+baseFontSize = "1rem"                    # Base font size
+baseFontWeight = 400                     # Base font weight
+codeFontWeight = 400                     # Code font weight
 # #
 # # Using Google Fonts (with fallback):
-# # font = "Roboto:https://fonts.googleapis.com/css2?family=Roboto, sans-serif"
-# # codeFont = "'Fira Code':https://fonts.googleapis.com/css2?family=Fira+Code, monospace"
+font = "Roboto:https://fonts.googleapis.com/css2?family=Roboto, sans-serif"
+codeFont = "'Fira Code':https://fonts.googleapis.com/css2?family=Fira+Code, monospace"
 # #
 # # Popular Nerd Fonts from Google Fonts:
 # # - JetBrains Mono: Clean monospace with ligatures
@@ -167,7 +167,7 @@ level = "info"                               # Log level: "error", "warning", "i
 # # - Open Sans: Clean, neutral sans-serif
 
 # # Border & Shape Options
-# # dataframeBorderColor = "#d0d0d0"         # DataFrame borders
+dataframeBorderColor = "#d0d0d0"         # DataFrame borders
 # # linkUnderline = true                     # Underline links
 
 # # Custom Font Faces (requires enableStaticServing = true)
@@ -190,5 +190,5 @@ level = "info"                               # Log level: "error", "warning", "i
 # -----------------------------------------------------------------------------
 # SECRETS MANAGEMENT
 # -----------------------------------------------------------------------------
-# # [secrets]
-# # files = [".streamlit/secrets.toml"]      # Path(s) to secrets files
+[secrets]
+files = [".streamlit/secrets.toml"]      # Path(s) to secrets files
