--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,7 @@ streamlit-extras>=0.6.0
 
 # Optional: hotkeys support (install from GitHub)
 streamlit-hotkeys @ git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
+
+# Subscription/Payment
+st-paywall>=1.0.1
+stripe>=11.0.0
