Add auto-refresh functionality and admin dashboard
Integrated streamlit-autorefresh for real-time page updates and created restricted admin dashboard with analytics and system monitoring.

Auto-refresh Integration:
- Add autorefresh_config.py with centralized refresh management
- Implement user-facing refresh controls in sidebar
- Add auto-refresh to Action Logs (5s default)
- Add auto-refresh to Scheduled Jobs (10s default)
- Add optional auto-refresh to Portfolio (10s, disabled by default)
- Support configurable intervals: realtime, fast, medium, slow, very slow
- Include debounce to pause refresh during user interaction

Admin Dashboard (11_🔐_Admin.py):
- Restrict access to luis.e.fernandezdelavara@gmail.com only
- Add Supabase connection monitoring and table diagnostics
- Integrate streamlit-analytics for usage tracking
- Show system information (Python, platform, environment vars)
- Display user sessions and activity metrics
- Provide log file viewer for application logs
- Include auto-refresh controls

Other Changes:
- Add streamlit-autorefresh>=1.0.1 to requirements
- Add streamlit-analytics>=0.5.0 to requirements
- Update app.py navigation with Admin page
- Update command_palette.py with Admin command
- Create comprehensive docs/AUTOREFRESH_INTEGRATION.md

Dependencies:
- streamlit-autorefresh for frontend timer-based refreshing
- streamlit-analytics for tracking pageviews and interactions

All changes maintain backward compatibility with existing functionality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,9 @@ streamlit-hotkeys @ git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
 # Subscription/Payment
 st-paywall>=1.0.1
 stripe>=11.0.0
+
+# Auto-refresh for live dashboards
+streamlit-autorefresh>=1.0.1
+
+# Analytics and monitoring
+streamlit-analytics>=0.5.0
