Fix database table references and add comprehensive CRUD interface
- Changed table references from politician_trades to trading_disclosures to match actual database schema
- Added politicians table to CRUD interface
- Created JSON templates for trading_disclosures and politicians tables
- Enhanced analytics parsing to handle mixed widget types (int and dict)
- Added dynamic table discovery in admin dashboard
- Fixed Supabase connection API usage (table().select() pattern)
- Updated documentation with correct table names and field names
- Added comprehensive error handling with full tracebacks
- Improved admin dashboard with better status indicators

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ analytics.json
 .github/instructions/codacy.instructions.md
 .streamlit/secrets.toml
 .streamlit/secrets.toml.cloud
+.credentials/
