--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,14 @@ dev = [
   "ruff>=0.1.0",
   "pre-commit>=3.6.0",
 ]
+# Streamlit deployment extras (not in main dependencies)
+streamlit-extras = [
+  "streamlit-extras>=0.6.0",
+  "st-paywall>=1.0.1",
+  "stripe>=11.0.0",
+  "streamlit-autorefresh>=1.0.1",
+  "streamlit-analytics>=0.5.0",
+]
 
 [tool.black]
 line-length = 100
