Fix streamlit-hotkeys dependency format for Streamlit Cloud
Changed from:
  streamlit-hotkeys @ git+https://...

To:
  git+https://github.com/viktor-shcherb/streamlit-hotkeys.git

This format is more compatible with Streamlit Cloud's pip installer.
Also removed "Optional" from comment to ensure it's always installed.

Fixes the warning:
  "Hotkeys not enabled — to enable keyboard shortcuts install:
   pip install git+https://github.com/viktor-shcherb/streamlit-hotkeys.git"

--- a/requirements.txt
+++ b/requirements.txt
@@ -60,8 +60,8 @@ stqdm>=0.0.5
 st-supabase-connection>=2.1.0
 streamlit-extras>=0.6.0
 
-# Optional: hotkeys support (install from GitHub)
-streamlit-hotkeys @ git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
+# Keyboard shortcuts support (from GitHub)
+git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
 
 # Subscription/Payment
 st-paywall>=1.0.1
