Fix package versions for Streamlit Cloud deployment
Fixed two package installation issues:

1. streamlit-hotkeys:
   - Added explicit branch and egg name
   - Changed: git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
   - To: git+https://github.com/viktor-shcherb/streamlit-hotkeys.git@main#egg=streamlit-hotkeys
   - This helps Streamlit Cloud properly detect and install the package

2. streamlit-analytics:
   - Fixed impossible version requirement
   - Changed: >=0.5.0 (doesn't exist)
   - To: >=0.4.1 (latest available version)
   - Latest version on PyPI is 0.4.1, not 0.5.0

These changes should allow Streamlit Cloud to properly install both packages.
If issues persist, clear Streamlit Cloud cache via Settings → Clear cache.

--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ st-supabase-connection>=2.1.0
 streamlit-extras>=0.6.0
 
 # Keyboard shortcuts support (from GitHub)
-git+https://github.com/viktor-shcherb/streamlit-hotkeys.git
+git+https://github.com/viktor-shcherb/streamlit-hotkeys.git@main#egg=streamlit-hotkeys
 
 # Subscription/Payment
 st-paywall>=1.0.1
@@ -71,4 +71,4 @@ stripe>=11.0.0
 streamlit-autorefresh>=1.0.1
 
 # Analytics and monitoring
-streamlit-analytics>=0.5.0
+streamlit-analytics>=0.4.1
