Fix production errors from Streamlit Cloud logs
Fixed three critical errors found in production logs:

1. KeyError: 'command_palette'
   - Location: streamlit_hotkeys_integration.py
   - Cause: pressed() function checking session_state when package not installed
   - Fix: Return early from register_hotkeys() if import fails
   - File: streamlit_hotkeys_integration.py:35

2. Datetime timezone error in signal generator
   - Error: "can't subtract offset-naive and offset-aware datetimes"
   - Location: src/politician_trading/signals/features.py:98
   - Cause: datetime.utcnow() (naive) mixed with datetime.fromisoformat() (aware)
   - Fix: Changed to datetime.now(timezone.utc) for consistency
   - File: src/politician_trading/signals/features.py:99

3. Deprecated Streamlit config options
   - Warnings: client.redColor, client.orangeColor, etc. not valid
   - Location: .streamlit/config.toml:141-157
   - Fix: Commented out all deprecated client.* color and font options
   - File: .streamlit/config.toml

These fixes resolve all errors seen in production logs dated 2025-11-04.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -137,24 +137,24 @@ showSidebarNavigation = true             # Show default navigation UI
 # # [theme]
 # # base = "light"                           # "light", "dark", or path to .toml file
 
-# # Additional Color Options
-redColor = "#ff4b4b"                     # Semantic red
-orangeColor = "#ffa421"                  # Semantic orange
-yellowColor = "#ffe312"                  # Semantic yellow
-greenColor = "#21c354"                   # Semantic green
-blueColor = "#0068c9"                    # Semantic blue
-violetColor = "#803df5"                  # Semantic violet
-grayColor = "#808495"                    # Semantic gray
+# # Additional Color Options (DEPRECATED - these have been removed from Streamlit)
+# redColor = "#ff4b4b"                     # Semantic red
+# orangeColor = "#ffa421"                  # Semantic orange
+# yellowColor = "#ffe312"                  # Semantic yellow
+# greenColor = "#21c354"                   # Semantic green
+# blueColor = "#0068c9"                    # Semantic blue
+# violetColor = "#803df5"                  # Semantic violet
+# grayColor = "#808495"                    # Semantic gray
 
-# # Font Customization
-headingFont = "sans serif"               # Heading font family
-baseFontSize = "1rem"                    # Base font size
-baseFontWeight = 400                     # Base font weight
-codeFontWeight = 400                     # Code font weight
+# # Font Customization (DEPRECATED - use theme section above instead)
+# headingFont = "sans serif"               # Heading font family
+# baseFontSize = "1rem"                    # Base font size
+# baseFontWeight = 400                     # Base font weight
+# codeFontWeight = 400                     # Code font weight
 # #
 # # Using Google Fonts (with fallback):
-font = "Roboto:https://fonts.googleapis.com/css2?family=Roboto, sans-serif"
-codeFont = "'Fira Code':https://fonts.googleapis.com/css2?family=Fira+Code, monospace"
+# font = "Roboto:https://fonts.googleapis.com/css2?family=Roboto, sans-serif"
+# codeFont = "'Fira Code':https://fonts.googleapis.com/css2?family=Fira+Code, monospace"
 # #
 # # Popular Nerd Fonts from Google Fonts:
 # # - JetBrains Mono: Clean monospace with ligatures
