--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,13 @@ jobs:
       run: |
         mypy src/
 
-    - name: Run tests
+    - name: Run unit tests
       run: |
-        pytest --cov=src/politician_trading --cov-report=xml --cov-report=html
+        pytest tests/unit/ -v --cov=src/politician_trading --cov-report=xml --cov-report=html
+
+    - name: Run pipeline tests
+      run: |
+        pytest tests/pipeline/ -v
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
@@ -49,9 +53,73 @@ jobs:
         file: ./coverage.xml
         fail_ci_if_error: true
 
-  build:
+  integration-tests:
+    name: Integration Tests
     runs-on: ubuntu-latest
     needs: test
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev]"
+
+    - name: Run integration tests
+      run: |
+        pytest tests/integration/ -v -s --tb=short
+      env:
+        # Mock Alpaca keys for testing (not real keys)
+        ALPACA_PAPER_API_KEY: PKTEST1234567890
+        ALPACA_PAPER_SECRET_KEY: test_secret_key_12345
+
+  e2e-tests:
+    name: End-to-End Trading Flow Tests
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -e ".[dev]"
+
+    - name: Run E2E trading flow test
+      run: |
+        pytest tests/integration/test_e2e_trading_flow.py -v -s --tb=short
+      env:
+        # Mock Alpaca keys for testing (not real keys)
+        ALPACA_PAPER_API_KEY: PKTEST1234567890
+        ALPACA_PAPER_SECRET_KEY: test_secret_key_12345
+
+    - name: Generate E2E test report
+      if: always()
+      run: |
+        pytest tests/integration/test_e2e_trading_flow.py --junitxml=e2e-test-report.xml
+
+    - name: Upload E2E test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: e2e-test-results
+        path: e2e-test-report.xml
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [test, integration-tests, e2e-tests]
 
     steps:
     - uses: actions/checkout@v4
