--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,9 @@ dev = [
   "pytest-mock>=3.14.1",
   "pytest-asyncio>=1.1.0",
   "pytest-timeout>=2.2.0",
+  "pytest-rerunfailures>=14.0",  # Flaky test detection
+  "pytest-benchmark>=4.0.0",  # Performance benchmarking
+  "pytest-xdist>=3.5.0",  # Parallel test execution
   "black>=23.0.0",
   "isort>=5.12.0",
   "mypy>=1.7.1",
